Fixes in z-index od card in offer section.

--- a/src/sass/components/_offer.scss
+++ b/src/sass/components/_offer.scss
@@ -21,7 +21,7 @@
 		min-height: 380px;
 		border-radius: 7px;
 		box-shadow: 0 1px 6px a.$color-grey-1;
-		z-index: 10;
+		z-index: 1;
 
 		&::before {
 			content: '';
